--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <body>
     
     <div class="clock"></div>
-
+    
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.15.1/TweenMax.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="main.js"></script>
 
